--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -6,20 +6,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>{{ title }}</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 
     <link rel="stylesheet" href="{{url_for ('static', filename='main.css')}}">
 
 </head>
 <body>
 <header>
-    <nav>
+<nav class="navbar navbar-expand-lg  mb2" >
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img src="/static/images/LogoPF.png" alt="" width="60" class="d-inline-block align-text-center">
+                Pure Fitness
+              </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <!-- <span class="navbar-toggler-icon"></span> -->
+            <span></span>
+            <span></span>
+            <span></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
 
-    </nav>
+            <ul class="navbar-nav ms-auto mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About Us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Book A Class</a>
+              </li>
+            </ul>
+            <ul class="navbar-nav ms-auto">
+              <button class="btn">Login</button>
+
+            </ul>
+
+
+          </div>
+        </div>
+      </nav>
 </header>
 
 
     <h1>{{ title }}</h1>
-    {% block body_content %} {% endblock %}
+    {% block body_content %}
+
+    {% endblock %}
 
 <footer>
     <a href="" >Twitter</a>
