started home page

--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <header>
-<nav class="navbar navbar-expand-lg  mb2" >
+<nav class="navbar fixed-top navbar-expand-lg  mb2" >
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
                 <img src="/static/images/LogoPF.png" alt="" width="60" class="d-inline-block align-text-center">
