--- a/application/static/main.css
+++ b/application/static/main.css
@@ -7,9 +7,29 @@
 background-color: #FDFCDC;
 }
 
-.navbar strong:hover {
-    color: white!important;
+.navbar-brand{color:black;
+}
+
+
+.navbar-expand-lg .navbar-nav .nav-link{
+    padding:2rem 1.2rem;
+    font-size: 1.4rem;
+    position:relative;
+    color:black;
+ }
+  .navbar-expand-lg .navbar-nav .nav-link:hover{
+    border-top: 4px solid #D4E6B5;
+    color:#D4E6B5;
   }
+
+  .navbar-expand-lg .navbar-nav .nav-link:active{
+    border-top: 4px solid #D4E6B5;
+    color: #D4E6B5;
+
+  }
+
+
+
 
 .box-two{
     background-image: url("images/pool.jpg");
