--- a/application/static/main.css
+++ b/application/static/main.css
@@ -2,6 +2,137 @@
 *{
     font-family: 'Poppins', sans-serif;
 }
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap');
+{
+box-sizing: border-box;
+margin: 0;
+padding: 0;
+background-color: #24252A;
+}
+
+li, a, button {
+font-family: 'Montserrat', sans-serif;
+font-weight: 500;
+font-size: 16px;
+color: #ECF0F1
+text-decoration: none;
+}
+
+.logo {
+cursor: pointer;
+
+}
+
+.nav_links{
+list-style: none;
+}
+
+.nav_links {
+display: inline-block;
+padding: 0px 20px;
+
+}
+
+.nav_links li a {
+transition: all 0.3s ease 0s;
+
+}
+
+.nav_links li a:hover {
+color: #0088a9;
+}
+
+button {
+padding: 9px 25px;
+background-color: rgba(0, 136, 169, 1);
+border: none;
+border-radius: 50px;
+cursor:pointer;
+transition: all 0.3s ease 0s;
+}
+
+button:hover {
+background-color: rgba(0, 136, 169, 0.8);
+
+}
+
+
+
+header {
+display: flex;
+justify-content: space-between;
+align-items: center;
+padding: 30px 10%;
+
+}
+
+.inner-footer {
+margin: 0;
+padding: 0;
+background-color: #272727;
+
+}
+
+.social-links {
+display: flex;
+}
+
+.social-links ul {
+padding: 10px;
+display: flex;
+width: 300px;
+height: 30px;
+margin: auto;
+}
+
+.social-items {
+list-style: none;
+}
+
+.social-items a{
+padding: 10px 20px;
+font-size: 35px;
+color: #6cccc6;
+transition: all .25s;
+}
+
+.social-items a:hover{
+color: #54a339e;
+}
+
+.quick-links {
+display: flex;
+width: 560px;
+height: 70;
+margin: auto;
+}
+
+.quick-links ul {
+display-flex;
+}
+
+.quick-items{
+list-style: none;
+}
+
+.quick-items a{
+text-decoration: none;
+padding: 0px 15px;
+font-size: 20spx;
+color: white;
+transition: all 0.25s;
+}
+
+.quick-items a:hover {
+color: #6cccc6;
+}
+
+outer-footer{
+padding: 10px;
+text-align: center;
+font-size: 18px;
+
+}
 
 .navbar{
 background-color: #FDFCDC;
@@ -135,3 +266,5 @@ width: 1100px;
   transform: translateY(0);
   box-shadow: 0 0 0 200px rgba(0, 0, 0, 0.5);
 }
+
+
