--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -7,66 +7,58 @@
 
     <title>{{ title }}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-
     <link rel="stylesheet" href="{{url_for ('static', filename='main.css')}}">
 
 </head>
 <body>
 <header>
-<nav class="navbar fixed-top navbar-expand-lg  mb2" >
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <img src="/static/images/LogoPF.png" alt="" width="60" class="d-inline-block align-text-center">
-                Pure Fitness
-              </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <!-- <span class="navbar-toggler-icon"></span> -->
-            <span></span>
-            <span></span>
-            <span></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
-
-            <ul class="navbar-nav ms-auto mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">About Us</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Book A Class</a>
-              </li>
-            </ul>
-            <ul class="navbar-nav ms-auto">
-              <button class="btn">Login</button>
-
-            </ul>
-
-
-          </div>
-        </div>
-      </nav>
+    <nav>
+<!--        <img class="logo" src="static/images/LogoPF.png" alt="logo">-->
+        <ul class="nav_links">
+            <li><a href="#">HOME</a></li>
+            <li><a href="#">ABOUT US</a></li>
+            <li><a href="#">BOOK CLASS</a></li>
+        </ul>
+    </nav>
+    <a class="cta" href="#"><button>LOGIN</button></a>
 </header>
 
+<footer class="footer">
+    <div class="inner-footer">
+        <div class="social-links">
+            <ul>
+                <li class="social-items"><a href="#"><i class="fab fa-facebook"></i></a></li>
+                 <li class="social-items"><a href="#"><i class="fab fa-twitter-square"></i></a></li>
+                 <li class="social-items"><a href="#"><i class="fab fa-instagram"></i></a></li>
+                <li class="social-items"><a href="#"><i class="fab fa-tiktok"></i></a></li>
+            </ul>
+        </div>
 
-    <h1>{{ title }}</h1>
-    {% block body_content %}
+        <div class="quick.links">
+            <ul>
+                <li class="quick-items"><a href="#">Home</a>
+                <li class="quick-items"><a href="#">Classes</a>
+                <li class="quick-items"><a href="#">Services</a>
+                <li class="quick-items"><a href="#">About Us</a>
+                <li class="quick-items"><a href="#">Contact Us</a>
 
-    {% endblock %}
+                </li>
+            </ul>
 
-<footer>
-    <a href="" >Twitter</a>
-    <a href="" >Instagram</a>
-    <a href="" >Facebook</a>
-    <a href="">About Us</a>
-    <a href="">FAQs</a>
-    <a href="">Contact Us</a>
+
+
+        </div>
+    </div>
+    <div class="outer-footer">
+        Copyright &copy; All rights reserved
+
+    </div>
 
 </footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous">
 
-</script>
+
+
+
 
 </body>
 </html>
