--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -36,13 +36,13 @@
 
         <div class="quick.links">
             <ul>
-                <li class="quick-items"><a href="#">Home</a>
-                <li class="quick-items"><a href="#">Classes</a>
-                <li class="quick-items"><a href="#">Services</a>
-                <li class="quick-items"><a href="#">About Us</a>
-                <li class="quick-items"><a href="#">Contact Us</a>
+                <li class="quick-items"><a href="#">Home</a></li>
+                <li class="quick-items"><a href="#">Classes</a></li>
+                <li class="quick-items"><a href="#">Services</a></li>
+                <li class="quick-items"><a href="#">About Us</a></li>
+                <li class="quick-items"><a href="#">Contact Us</a></li>
 
-                </li>
+
             </ul>
 
 
