--- a/application/static/main.css
+++ b/application/static/main.css
@@ -43,6 +43,7 @@ color: #0088a9;
 }
 
 button {
+margin-left: 20px
 padding: 9px 25px;
 background-color: rgba(0, 136, 169, 1);
 border: none;
@@ -58,7 +59,7 @@ background-color: rgba(0, 136, 169, 0.8);
 
 header {
 display: flex;
-justify-content: space-between;
+justify-content: flex-end;
 align-items: center;
 padding: 30px 10%;
 
