--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -11,9 +11,12 @@
 
 </head>
 <body>
+
+
 <header>
+
     <nav>
-<!--        <img class="logo" src="static/images/LogoPF.png" alt="logo">-->
+
         <ul class="nav_links">
             <li><a href="#">HOME</a></li>
             <li><a href="#">ABOUT US</a></li>
@@ -22,6 +25,12 @@
     </nav>
     <a class="cta" href="#"><button>LOGIN</button></a>
 </header>
+
+{%block body_content%}
+
+
+{%endblock%}
+
 
 <footer class="footer">
     <div class="inner-footer">
@@ -37,8 +46,7 @@
         <div class="quick.links">
             <ul>
                 <li class="quick-items"><a href="#">Home</a></li>
-                <li class="quick-items"><a href="#">Classes</a></li>
-                <li class="quick-items"><a href="#">Services</a></li>
+                <li class="quick-items"><a href="#">Policies</a></li>
                 <li class="quick-items"><a href="#">About Us</a></li>
                 <li class="quick-items"><a href="#">Contact Us</a></li>
 
@@ -55,7 +63,7 @@
 </footer>
 
 
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 
 
 </body>
