created login page and the tables

--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -62,6 +62,7 @@
 
     <div class="flex-container flex-column justify-content-end align-items-centre" style="background-color:#00AFB9; color:#FDFCDC">
         <div class="box-one">
+            <a name="about"></a>
             <h2 class="h-2" style="background-color:#F07167;padding-top: 15px;
                 padding-right: 15px; padding-bottom: 15px; padding-left: 15px;">Everybody is welcome at the UK's favourite fitness centre</h2>
             <br>
