--- a/application/templates/login.html
+++ b/application/templates/login.html
@@ -1,10 +1,45 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "layout.html" %}
 
-</body>
-</html>
+{{ url_for('templates', filename='login.html') }}
+
+{% block title %}Login{% endblock %}
+
+{% block body_content %}
+<head>
+<link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/sign-in/">
+</head>
+<div class="text-center">
+
+<main class="form-signin">
+  <form>
+    <img class="mb-4" src="/static/logo.png" alt="GymFitnesLogo" width="100" height="100">
+    <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+
+    <div class="form-floating">
+      {{ form.hidden_tag() }}
+              {{ form.email.label }} {{ form.email }}
+              <br>
+    </div>
+    <div class="form-floating">
+      {{ form.password.label }} {{ form.password }}
+              <br>
+    </div>
+
+    <div class="checkbox mb-3">
+      <label>
+        <input type="checkbox" value="remember-me"> Remember me
+      </label>
+    </div>
+    <button class="w-100 btn btn-lg btn-primary" type="submit">{{ Login }}</button>
+    <div class="border-top pt-3">
+        <small class="text-muted">
+            Don’t have an account? <a class="ml-2" href="{{ url_for('login') }}">Register here</a>
+        </small>
+    </div>
+    <p class="mt-5 mb-3 text-muted">&copy; Gym Fitness 2021</p>
+  </form>
+</main>
+</div>
+
+{% endblock %}
+
