--- a/application/static/main.css
+++ b/application/static/main.css
@@ -2,169 +2,6 @@
 *{
     font-family: 'Poppins', sans-serif;
 }
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap');
-{
-box-sizing: border-box;
-margin: 0;
-padding: 0;
-background-color: #24252A;
-}
-
-li, a, button {
-font-family: 'Montserrat', sans-serif;
-font-weight: 500;
-font-size: 16px;
-color: #ECF0F1
-text-decoration: none;
-}
-
-.logo {
-cursor: pointer;
-margin-right:auto;
-
-}
-
-.nav_links{
-list-style: none;
-}
-
-.nav_links li {
-display: inline-block;
-padding: 0px 20px;
-
-}
-
-.nav_links li a {
-transition: all 0.3s ease 0s;
-
-}
-
-.nav_links li a:hover {
-color: #0088a9;
-}
-
-button {
-margin-left: 20px
-padding: 9px 25px;
-background-color: rgba(0, 136, 169, 1);
-border: none;
-border-radius: 50px;
-cursor:pointer;
-transition: all 0.3s ease 0s;
-}
-
-button:hover {
-background-color: rgba(0, 136, 169, 0.8);
-
-}
-
-header {
-display: flex;
-justify-content: flex-end;
-align-items: center;
-padding: 30px 10%;
-
-}
-
-.inner-footer {
-margin: 0;
-padding: 0;
-background-color: #272727;
-
-}
-
-.social-links {
-display: flex;
-}
-
-.social-links ul {
-padding: 10px;
-display: flex;
-width: 300px;
-height: 30px;
-margin: auto;
-}
-
-.social-items {
-list-style: none;
-}
-
-.social-items a{
-padding: 10px 20px;
-font-size: 35px;
-color: #6cccc6;
-transition: all .25s;
-}
-
-.social-items a:hover{
-color: #54a339e;
-}
-
-.quick-links {
-display: flex;
-width: 560px;
-height: 70;
-margin: auto;
-}
-
-.quick-links ul {
-display: flex;
-}
-
-.quick-items{
-list-style: none;
-}
-
-.quick-items a{
-text-decoration: none;
-padding: 0px 15px;
-font-size: 20spx;
-color: white;
-transition: all 0.25s;
-}
-
-.quick-items a:hover {
-color: #6cccc6;
-}
-
-outer-footer{
-padding: 10px;
-text-align: center;
-font-size: 18px;
-
-}
-
-header{width:100%;}
-
-.navbar{
-background-color: #FDFCDC;
-width:100%;
-
-}
-
-.navbar-brand{color:black;
-}
-
-
-.navbar-expand-lg .navbar-nav .nav-link{
-    padding:2rem 1.2rem;
-    font-size: 1.4rem;
-    position:relative;
-    color:black;
- }
-  .navbar-expand-lg .navbar-nav .nav-link:hover{
-    border-top: 4px solid #D4E6B5;
-    color:#D4E6B5;
-  }
-
-  .navbar-expand-lg .navbar-nav .nav-link:active{
-    border-top: 4px solid #D4E6B5;
-    color: #D4E6B5;
-
-  }
-
-
-
 
 .box-two{
     background-image: url("images/pool.jpg");
@@ -271,4 +108,55 @@ width: 1100px;
   box-shadow: 0 0 0 200px rgba(0, 0, 0, 0.5);
 }
 
+#LOGIN/REG CSS
+
+html, body {
+  height: 100%;
+}
+
+body {
+
+  align-items: center;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  background-color: white;
+}
+
+.form-signin {
+  width: 100%;
+  max-width: 330px;
+  padding: 15px;
+  margin: auto;
+}
+
+.form-signin .checkbox {
+  font-weight: 400;
+}
+
+.form-signin .form-floating:focus-within {
+  z-index: 2;
+}
+
+.form-signin input[type="email"] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+
+
+}
+
+.form-signin input[type="password"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+
+
+}
+
+.w-100 btn btn-lg btn-primary {
+color: rgb(0,129,167);
+}
+
+label {
+    display: text-center;
 
