--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -7,25 +7,32 @@
 
     <title>{{ title }}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{url_for ('static', filename='main.css')}}">
+    <link rel="stylesheet" href="{{url_for ('static', filename='headerfooter.css')}}">
+
+
 
 </head>
+
+
 <body>
 
-
+<div class="navigation">
 <header>
 
-    <nav>
+        <nav>
 
-        <ul class="nav_links">
-            <li><a href="#">HOME</a></li>
-            <li><a href="#">ABOUT US</a></li>
-            <li><a href="#">BOOK CLASS</a></li>
-        </ul>
-    </nav>
-    <a class="cta" href="#"><button>LOGIN</button></a>
+                <ul class="nav_links">
+                    <li><a href="{{ url_for('home') }}">HOME</a></li>
+                    <li><a href="#about">ABOUT US</a></li>
+                    <li><a href="{{ url_for('book') }}">BOOK CLASS</a></li>
+                </ul>
+
+        </nav>
+
+        <a class="cta" href="{{ url_for('login') }}"><button>LOGIN</button></a>
+
 </header>
-
+</div>
 {%block body_content%}
 
 
@@ -45,10 +52,9 @@
 
         <div class="quick.links">
             <ul>
-                <li class="quick-items"><a href="#">Home</a></li>
-                <li class="quick-items"><a href="#">Policies</a></li>
-                <li class="quick-items"><a href="#">About Us</a></li>
-                <li class="quick-items"><a href="#">Contact Us</a></li>
+                <li class="quick-items"><a href="{{ url_for('home') }}">Home</a></li>
+                <li class="quick-items"><a href="{{ url_for('policies') }}">Policies</a></li>
+                <li class="quick-items"><a href="{{ url_for('contact') }}">Contact Us</a></li>
 
 
             </ul>
@@ -67,4 +73,5 @@
 
 
 </body>
+
 </html>
