--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -17,7 +17,7 @@
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img src="static/images/water_aerobics_carousel.jpeg" class="d-block w-100" alt="water aerobics class">
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption mb-5 d-md-block">
                   <h1>New classes available</h1>
                   <p>Try our new water aerobics class and meet our new instructor Tim Tomboy.</p>
                   <div class="slider-btn">
@@ -28,7 +28,7 @@
               </div>
               <div class="carousel-item">
                 <img src="static/images/hand_sanitiser.jpg" class="d-block w-100" alt="hand sanitiser">
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption mb-5 d-md-block">
                   <h1>Deep cleaning</h1>
                   <p>Our centre maintains the highest standard of hygiene to ensure we are Covid-Secure.</p>
                   <div class="slider-btn">
@@ -39,7 +39,7 @@
               </div>
               <div class="carousel-item">
                 <img src="static/images/young_gym_members.jpeg" class="d-block w-100" alt="Student members">
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption mb-5 d-md-block">
                   <h1>20% off Gold membership for full-time students</h1>
                   <p>Our offer won't last long! Why not take out new membership or upgrade now?</p>
                 </div>
@@ -60,41 +60,47 @@
     </div>
     <!-- About Us -->
 
-    <div class="flex-container flex-column justify-content-end align-items-centre" style="background-color:#00AFB9; color:#FDFCDC">
-        <div class="box-one">
-            <a name="about"></a>
-            <h2 class="h-2" style="background-color:#F07167;padding-top: 15px;
-                padding-right: 15px; padding-bottom: 15px; padding-left: 15px;">Everybody is welcome at the UK's favourite fitness centre</h2>
-            <br>
-                From flexible memberships and 24 hour opening times, to quality fitness equipment, studios and classes included,
-                there are loads of reasons why Pure Fitness is the UK's favourite Fitness Centre. Our mission is to help people
-                everywhere to lead a healthy and happy life, every day. Come and join us today.
+    <div class="container p-2 ms-2 me-2" >
+        <div class="row justify-content-center" id="aboutus">
+            <div class="col-8" >
+                <a name="about"></a>
+                <h2>EVERYBODY IS WELCOME AT THE UK'S FAVOURITE GYM</h2>
+                <p>From low cost flexible memberships and 24 hour opening times, to quality gym equipment and classes included, there are loads of reasons why Pure Fitness is the UK's favourite gym.
+                    Our mission is to help people everywhere to lead a healthy and happy life every day. Come and join us today.</p>
             </div>
-        <br>
+        </div>
+
     </div>
     <br>
 
     <!-- Facilities -->
-    <div class="container">
-         <div class="row">
-             <h3 class="col">Join us to enjoy these amazing facilities!</h3></div>
+    <div class="container-fluid justify-content-evenly">
+        <div class="row justify-content-center align-items-center">
+            <div class="col-8">
+                <h3>JOIN US AND ENJOY THESE AMAZING FACILITIES AND BENEFITS </h3>
 
-         <div class="row" >
-            <div class="col-md-3 box-two reveal-text-on-image" data-text="Swim in our beautiful 30m pool and viewing gallery is the perfect place to come and swim.">
             </div>
-
-            <div class=" col-md-3 box-three reveal-text-on-image" data-text="Spread over three floors, our gym features cardio equipment to choose from, including a new TRX system.">
-            </div>
-
-            <div class="col-md-3 box-four reveal-text-on-image" data-text="Our group fitness studio plays host to a variety of different classes. Find the right class for you and you can meet new people too.">
-            </div>
-
-            <div class="col-md-3 box-five reveal-text-on-image" data-text="Come and relax, unwind and refresh yourself in our health suite, whether that’s after a workout, or just a hard day at work">
-            </div>
-
         </div>
+         <div class="row justify-content-evenly">
+            <div class="col-xs col-md-6 box-two reveal-text-on-image" data-text="Swim in our beautiful 30m pool and viewing gallery is the perfect place to come and swim.">
+
+            </div>
+
+            <div class=" col-xs col-md-6 box-three reveal-text-on-image" data-text="Spread over three floors, our gym features cardio equipment to choose from, including a new TRX system.">
+            </div>
         </div>
+
+    <div class="row justify-content-evenly">
+
+    <div class="col-xs col-md-3 box-four reveal-text-on-image" data-text="Our group fitness studio plays host to a variety of different classes. Find the right class for you and you can meet new people too.">
     </div>
+
+    <div class="col-xs col-md-3 box-five reveal-text-on-image" data-text="Come and relax, unwind and refresh yourself in our health suite, whether that’s after a workout, or just a hard day at work">
+    </div>
+
+    </div>
+</div>
+
 
     <br>
     <div class="flex-container">
