--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -49,7 +49,9 @@
 
       </ul>
         <ul class="navbar-nav ms-auto">
-        <button id="login-btn" type="button" class="btn navbar-nav ms-auto" onclick="openLogin">LOGIN</button>
+
+        <button id="login-btn" type="button" class="btn navbar-nav ms-auto" onClick="location.href='{{ url_for('login') }}';">LOGIN </button>
+
         </ul>
 
     </div>
@@ -110,9 +112,9 @@
 
 
 <script>
-    let login=document.getElementById("loginbtn");
-    function openLogin(){
-    location.href="{{url_for('login')}}";}
+<!--    let login=document.getElementById("loginbtn");-->
+<!--    function openLogin(){-->
+<!--    location.href="{{url_for('login')}}";}-->
 </script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 
