--- a/application/templates/register.html
+++ b/application/templates/register.html
@@ -1,10 +1,11 @@
 {% extends "layout.html" %}
 
-{{ url_for('templates', filename='login.html') }}
+{{ url_for('templates', filename='register.html') }}
 
-{% block title %}Login{% endblock %}
+{% block title %}Register{% endblock %}
 
 {% block body_content %}
+
 <head>
 <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/sign-in/">
 </head>
@@ -13,7 +14,7 @@
 <main class="form-signin">
   <form>
     <img class="mb-4" src="/static/logo.png" alt="GymFitnessLogo" width="100" height="100">
-    <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+    <h1 class="h3 mb-3 fw-normal">Please Register Below</h1>
 
     <div class="form-floating">
       {{ form.hidden_tag() }}
@@ -30,10 +31,10 @@
         <input type="checkbox" value="remember-me"> Remember me
       </label>
     </div>
-    <button class="w-20 btn btn-lg btn-primary" type="submit">{{ Login }}</button>
+    <button class="w-100 btn btn-lg btn-primary" type="submit">{{ Login }}</button>
     <div class="border-top pt-3">
         <small class="text-muted">
-            Don’t have an account? <a class="ml-2" href="{{ url_for('login') }}">Register here</a>
+            Already have an account? <a class="ml-2" href="{{ url_for('login') }}">Login here</a>
         </small>
     </div>
     <p class="mt-5 mb-3 text-muted">&copy; Gym Fitness 2021</p>
@@ -42,4 +43,3 @@
 </div>
 
 {% endblock %}
-
