created registration form, added in policy content

--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -94,7 +94,7 @@
       <div class="footer-links ">
             <ul>
                 <li class="footer-item"><a href="{{ url_for('home') }}">Home</a></li>
-                <li class="footer-item"><a href="{{ url_for('policies') }}">Policies</a></li>
+                <li class="footer-item"><a href="{{ url_for('policy') }}">Our Policy</a></li>
                 <li class="footer-item"><a href="{{ url_for('contact') }}">Contact Us</a></li>
             </ul>
         </div>
