--- a/application/static/main.css
+++ b/application/static/main.css
@@ -285,4 +285,13 @@ height: 20px;
 
 label {
     display: text-center;
+}
+
+.form-container {
+margin: auto;
+  width: 60%;
+  border: 3px solid #73AD21;
+  padding: 10px;
+}
+
 
