--- a/application/templates/dashboard.html
+++ b/application/templates/dashboard.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "layout.html" %}
 
-</body>
-</html>
+{{ url_for('templates', filename='dashboard.html') }}
+
+{% block title %}Dashboard{% endblock %}
+
+{% block body_content %}
+
+{% endblock %}
