--- a/application/templates/login.html
+++ b/application/templates/login.html
@@ -30,7 +30,7 @@
         <input type="checkbox" value="remember-me"> Remember me
       </label>
     </div>
-    <button class="w-20 btn btn-lg btn-primary" type="submit">{{ Login }}</button>
+    <button class="btn btn-primary" type="submit">Login</button>
     <div class="border-top pt-3">
         <small class="text-muted">
             Don’t have an account? <a class="ml-2" href="{{ url_for('login') }}">Register here</a>
