--- a/application/templates/register.html
+++ b/application/templates/register.html
@@ -6,40 +6,108 @@
 
 {% block body_content %}
 
-<head>
-<link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/sign-in/">
-</head>
-<div class="text-center">
-
-<main class="form-signin">
-  <form>
-    <img class="mb-4" src="/static/logo.png" alt="GymFitnessLogo" width="100" height="100">
-    <h1 class="h3 mb-3 fw-normal">Please Register Below</h1>
-
-    <div class="form-floating">
-      {{ form.hidden_tag() }}
-              {{ form.email.label }} {{ form.email }}
-              <br>
+<br>
+<br>
+<br>
+<br>
+<div class="container form-container">
+<form class="needs-validation" novalidate>
+  <div class="form-row">
+    <div class="col-md-4 mb-3">
+      {{ form.first_name.label }} {{ form.first_name }}
+        <div class="valid-feedback">
+        Looks good!
+      </div>
     </div>
-    <div class="form-floating">
-      {{ form.password.label }} {{ form.password }}
-              <br>
+    <div class="col-md-4 mb-3">
+      {{ form.last_name.label }} {{ form.last_name }}
+      <div class="valid-feedback">
+        Looks good!
+      </div>
     </div>
-
-    <div class="checkbox mb-3">
-      <label>
-        <input type="checkbox" value="remember-me"> Remember me
+    <div class="col-md-4 mb-3">
+      {{ form.dob.label }} {{ form.dob }}
+      <div class="valid-feedback">
+        Looks good!
+      </div>
+    </div>
+    <div class="col-md-4 mb-3">
+        {{ form.email_address.label }} {{ form.email_address }}
+        <div class="invalid-feedback">
+          Please enter an email address.
+        </div>
+    </div>
+    <div class="col-md-4 mb-3">
+        {{ form.contact_number.label }} {{ form.contact_number }}
+        <div class="invalid-feedback">
+          Please choose a contact number.
+        </div>
+    </div>
+      <div class="col-md-4 mb-3">
+        {{ form.address.label }} {{ form.address }}
+        <div class="invalid-feedback">
+          Please choose an address.
+        </div>
+    </div>
+    <div class="col-md-4 mb-3">
+        {{ form.post_code.label }} {{ form.post_code }}
+        <div class="invalid-feedback">
+          Please choose a postcode.
+        </div>
+    </div>
+    <div class="col-md-4 mb-3">
+        {{ form.city.label }} {{ form.city }}
+        <div class="invalid-feedback">
+          Please choose a city.
+        </div>
+    </div>
+    <div class="col-md-4 mb-3">
+        {{ form.password.label }} {{ form.password }}
+        <div class="invalid-feedback">
+          Please choose a password.
+        </div>
+    </div>
+    <div class="col-md-4 mb-3">
+        {{ form.confirm_password.label }} {{ form.confirm_password }}
+        <div class="invalid-feedback">
+          Please choose confirm password.
+        </div>
+    </div>
+  </div>
+  <div class="form-group">
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
+      <label class="form-check-label" for="invalidCheck">
+        <a href = "{{ url_for ('policy') }}"> Agree to terms and conditions</a>
       </label>
+      <div class="invalid-feedback">
+        You must agree before submitting.
+      </div>
     </div>
-    <button class="w-100 btn btn-lg btn-primary" type="submit">{{ Login }}</button>
-    <div class="border-top pt-3">
-        <small class="text-muted">
-            Already have an account? <a class="ml-2" href="{{ url_for('login') }}">Login here</a>
-        </small>
-    </div>
-    <p class="mt-5 mb-3 text-muted">&copy; Gym Fitness 2021</p>
-  </form>
-</main>
+  </div>
+    {{ form.submit(class="btn btn-primary") }}
+</form>
 </div>
+
+<script>
+// Example starter JavaScript for disabling form submissions if there are invalid fields
+(function() {
+  'use strict';
+  window.addEventListener('load', function() {
+    // Fetch all the forms we want to apply custom Bootstrap validation styles to
+    var forms = document.getElementsByClassName('needs-validation');
+    // Loop over them and prevent submission
+    var validation = Array.prototype.filter.call(forms, function(form) {
+      form.addEventListener('submit', function(event) {
+        if (form.checkValidity() === false) {
+          event.preventDefault();
+          event.stopPropagation();
+        }
+        form.classList.add('was-validated');
+      }, false);
+    });
+  }, false);
+})();
+</script>
 
 {% endblock %}
